<resources>
    <string name="app_name">application1</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_iphone_13_pro_m23">iPhone 13 Pro Max - Thirteen</string>
    <string name="lbl_here">Here</string>
    <string name="msg_iphone_13_pro_m22">iPhone 13 Pro Max - Ten</string>
    <string name="msg_iphone_13_pro_m21">iPhone 13 Pro Max - Three One</string>
    <string name="msg_notes_no_feta">Notes: No Feta X1
No Onions X3</string>
    <string name="msg_iphone_13_pro_m20">iPhone 13 Pro Max - Six</string>
    <string name="msg_iphone_13_pro_m27">iPhone 13 Pro Max - Six One</string>
    <string name="lbl_individual">Individual</string>
    <string name="msg_employee_develo">Employee Development Program</string>
    <string name="msg_iphone_13_pro_m26">iPhone 13 Pro Max - Ten One</string>
    <string name="msg_iphone_13_pro_m25">iPhone 13 Pro Max - Seven</string>
    <string name="msg_iphone_13_pro_m24">iPhone 13 Pro Max - Four One</string>
    <string name="lbl_email_address">Email Address</string>
    <string name="lbl_mwk_79_750">MWK 79,750</string>
    <string name="lbl_business_name">Business Name</string>
    <string name="msg_enter_your_busi">Enter Your Business Details</string>
    <string name="lbl_purchase_price">Purchase Price</string>
    <string name="lbl_load_more">Load More</string>
    <string name="lbl_118_950_00">118,950.00</string>
    <string name="lbl_14_units_left">14 Units Left</string>
    <string name="lbl_tells_about_you">Tells About You</string>
    <string name="lbl_log_in_sign_up">Log In/Sign Up</string>
    <string name="msg_iphone_13_pro_m19">iPhone 13 Pro Max - Fourteen</string>
    <string name="lbl_phone_number">Phone Number </string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="msg_iphone_13_pro_m18">iPhone 13 Pro Max - Four</string>
    <string name="msg_iphone_13_pro_m17">iPhone 13 Pro Max - Five One</string>
    <string name="msg_your_payment_wa">Your Payment Was Unsuccessful</string>
    <string name="lbl_mwk_17_450_00">MWK 17,450.00</string>
    <string name="msg_iphone_13_pro_m34">iPhone 13 Pro Max - Thirteen One</string>
    <string name="msg_iphone_13_pro_m33">iPhone 13 Pro Max - Nine One</string>
    <string name="msg_iphone_13_pro_m32">iPhone 13 Pro Max - Five Two</string>
    <string name="msg_iphone_13_pro_m31">iPhone 13 Pro Max - Seven One</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_add_new_items">Add New Items</string>
    <string name="msg_iphone_13_pro_m37">iPhone 13 Pro Max - Twenty</string>
    <string name="lbl_analytics">Analytics</string>
    <string name="msg_iphone_13_pro_m36">iPhone 13 Pro Max - Seven Two</string>
    <string name="msg_shop_grocery_s">Shop, Grocery Store, Petrol Station, Vendor</string>
    <string name="lbl_7_500_00">7,500.00</string>
    <string name="msg_iphone_13_pro_m35">iPhone 13 Pro Max - Fourteen One</string>
    <string name="lbl_open_orders2">Open  Orders</string>
    <string name="msg_iphone_13_pro_m30">iPhone 13 Pro Max - Twelve One</string>
    <string name="lbl_retailer">Retailer</string>
    <string name="lbl_location">Location</string>
    <string name="msg_ingredient_or_f">Ingredient or Final Product?</string>
    <string name="lbl_add_a_new_item">Add a New Item</string>
    <string name="lbl_menu_view">Menu View</string>
    <string name="msg_iphone_13_pro_m29">iPhone 13 Pro Max - Eleven One</string>
    <string name="msg_iphone_13_pro_m28">iPhone 13 Pro Max - Fifteen One</string>
    <string name="msg_business_locati">Business Location</string>
    <string name="msg_notes_lettuce">Notes: Lettuce and Dills X1
No Onions X3</string>
    <string name="lbl_contact_support">Contact Support</string>
    <string name="lbl_here2"> Here</string>
    <string name="msg_apple_android">Apple, Android, Samsung Pay</string>
    <string name="msg_we_only_cater_t">We only cater to Businesse Customers</string>
    <string name="lbl_back_to_login">Back to Login</string>
    <string name="lbl_james_cordon">James Cordon</string>
    <string name="lbl_view_menu">View Menu</string>
    <string name="lbl_try_again">Try Again</string>
    <string name="lbl_chicken">Chicken</string>
    <string name="msg_non_alcoholic_d">Non-Alcoholic Drinks</string>
    <string name="lbl_delete">Delete</string>
    <string name="msg_arlenemccoy_exa">arlenemccoy@example.com</string>
    <string name="lbl_x_2">X 2</string>
    <string name="lbl_x_1">X 1</string>
    <string name="msg_empoyee_insight">Empoyee
Insights</string>
    <string name="lbl_x_7">X 7</string>
    <string name="lbl_x_4">X 4</string>
    <string name="lbl_e_mail2">E-Mail:</string>
    <string name="msg_iphone_13_pro_m2">iPhone 13 Pro Max - Five</string>
    <string name="msg_iphone_13_pro_m12">iPhone 13 Pro Max - Nine</string>
    <string name="msg_iphone_13_pro_m3">iPhone 13 Pro Max - Eighteen</string>
    <string name="msg_iphone_13_pro_m11">iPhone 13 Pro Max - Seventeen</string>
    <string name="msg_iphone_13_pro_m4">iPhone 13 Pro Max - Fifteen</string>
    <string name="msg_iphone_13_pro_m10">iPhone 13 Pro Max - TwentyTwo</string>
    <string name="msg_iphone_13_pro_m5">iPhone 13 Pro Max - TwentyOne</string>
    <string name="lbl_e_mail_address2">E-Mail Address</string>
    <string name="msg_how_much_of_thi">How Much of this do you use in grams/kgs per serving?
i.e 1 Leaf=3 grams</string>
    <string name="msg_iphone_13_pro_m6">iPhone 13 Pro Max - Sixteen</string>
    <string name="msg_iphone_13_pro_m16">iPhone 13 Pro Max - One</string>
    <string name="lbl_measure_in">Measure In</string>
    <string name="msg_search_products">Search Products, Ingredients</string>
    <string name="msg_iphone_13_pro_m7">iPhone 13 Pro Max - Twelve</string>
    <string name="msg_iphone_13_pro_m15">iPhone 13 Pro Max - Eleven</string>
    <string name="lbl_mwk_118_000_00">MWK 118,000.00</string>
    <string name="msg_by_linq_finace">By LinQ Finace 
a Surge Technology Company</string>
    <string name="msg_iphone_13_pro_m8">iPhone 13 Pro Max - Eight</string>
    <string name="msg_iphone_13_pro_m14">iPhone 13 Pro Max - TwentyThree</string>
    <string name="msg_iphone_13_pro_m9">iPhone 13 Pro Max - Three</string>
    <string name="msg_iphone_13_pro_m13">iPhone 13 Pro Max - TwentyFour</string>
    <string name="msg_what_kind_of_bu">What Kind of Business Are You?</string>
    <string name="lbl_upload_files">Upload Files</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="lbl_mains">Mains</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_09900000000">09900000000</string>
    <string name="msg_are_there_ingre">Are There Ingredients?</string>
    <string name="lbl_yesterday">Yesterday</string>
    <string name="msg_upload_your_bus">Upload your Business
Registration Document</string>
    <string name="lbl_server">Server</string>
    <string name="msg_wadewarren_exam">wadewarren@example.com</string>
    <string name="msg_pop_up_unsucces">Pop Up/Unsuccessful</string>
    <string name="lbl_view_employees">View Employees</string>
    <string name="lbl_purchases">Purchases</string>
    <string name="msg_search_names_o">Search Names, Order Numbers, Items, Date</string>
    <string name="msg_iphone_13_pro_m">iPhone 13 Pro Max - Two</string>
    <string name="lbl_main">Main</string>
    <string name="lbl_no_items_added">No Items Added</string>
    <string name="lbl_mwk_12_000_00">MWK 12,000.00</string>
    <string name="msg_select_a_paymen">Select A Payment Method</string>
    <string name="msg_this_ingredient">This Ingredient is not in your inventory, would you like to add it?</string>
    <string name="msg_drinks_mega_mi">Drinks: Mega Milkshakes- Vanilla</string>
    <string name="lbl_their_sales">Their Sales</string>
    <string name="lbl_onboarding_five">Onboarding Five</string>
    <string name="lbl_we_re_sorry">We\u2019re Sorry</string>
    <string name="lbl_apples">Apples</string>
    <string name="lbl_oh_no">Oh, No</string>
    <string name="lbl_thank_you">Thank You</string>
    <string name="msg_select_a_catego2">Select A Category</string>
    <string name="lbl_onboarding_one">Onboarding One</string>
    <string name="lbl_category">Category</string>
    <string name="msg_tap_to_view_ite">Tap to View Items</string>
    <string name="lbl_inventory">Inventory</string>
    <string name="msg_add_a_new_categ">Add a New Category</string>
    <string name="msg_search_employee">Search Employees</string>
    <string name="lbl_mwk_30_000_00">MWK 30,000.00</string>
    <string name="lbl_reciept_preview">Reciept Preview</string>
    <string name="msg_add_new_item_fi2">Add New Item_Finished-Goods One</string>
    <string name="lbl_clear_history">Clear History</string>
    <string name="lbl_empty_state">Empty State</string>
    <string name="msg_products_for_re">Products for Reorder</string>
    <string name="lbl_onboarding">Onboarding</string>
    <string name="lbl_menu">Menu</string>
    <string name="msg_upload_your_per">Upload your Personal
Idenfication Document</string>
    <string name="lbl_wallet">Wallet</string>
    <string name="lbl_categories">Categories</string>
    <string name="lbl_mwk_17_500_00">MWK 17,500.00</string>
    <string name="lbl_search_items">Search Items</string>
    <string name="lbl_steak_chips">Steak &amp; Chips</string>
    <string name="lbl_hot_drinks">Hot Drinks</string>
    <string name="msg_your_i_d_docume">Your I.D Document</string>
    <string name="msg_inventory_insig">Inventory Insight</string>
    <string name="lbl_snacks">Snacks</string>
    <string name="msg_airtel_money_nu">Airtel Money Number</string>
    <string name="lbl_e_mail">E-Mail</string>
    <string name="lbl_meatballs">Meatballs</string>
    <string name="lbl_onion">Onion</string>
    <string name="msg_side_sweet_cor">Side: Sweet Corn</string>
    <string name="lbl_you_re_all_set">You\u2019re All Set</string>
    <string name="lbl_yes">Yes</string>
    <string name="msg_onboarding_seve">Onboarding Seven</string>
    <string name="lbl_choose_an_image">Choose an Image</string>
    <string name="lbl_business">Business</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_sign_up">Sign Up, </string>
    <string name="lbl_betty_jones">Betty Jones</string>
    <string name="lbl_guy_hawkins">Guy Hawkins</string>
    <string name="lbl_robert_fox">Robert Fox</string>
    <string name="msg_complete_paymen">Complete Payment</string>
    <string name="lbl_onboarding_two">Onboarding Two</string>
    <string name="msg_business_regist2">Business Registration
Document</string>
    <string name="lbl_add_new_order">Add New Order</string>
    <string name="lbl_save">Save</string>
    <string name="msg_tax_identificat">Tax Identification Number</string>
    <string name="msg_idenfication_nu">Idenfication Number</string>
    <string name="lbl_next">Next</string>
    <string name="msg_your_phone_numb">Your Phone Number</string>
    <string name="msg_enter_your_pers">Enter Your Personal Details</string>
    <string name="msg_your_first_and">Your First and Last Name</string>
    <string name="msg_your_email_addr">Your Email Address</string>
    <string name="msg_passport_natio">Passport, National ID</string>
    <string name="msg_business_regist">Business Registration Number</string>
    <string name="msg_idenfication_ty">Idenfication Type</string>
    <string name="lbl_tax_id">Tax ID</string>
    <string name="lbl_1">1</string>
    <string name="lbl_2">2</string>
    <string name="lbl_3">3</string>
    <string name="lbl_john_doe">John Doe</string>
    <string name="lbl_skip_for_now">Skip for Now</string>
    <string name="msg_identification">Identification Document Number</string>
    <string name="msg_legal_business">Legal Business Name I.E Example Limited</string>
</resources>