<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="onboardingThreeVM" type="com.application.app.modules.onboardingthree.data.viewmodel.OnboardingThreeVM"/>
    </data>
    <LinearLayout android:id="@+id/linearOnboardingThre"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtEnterYourPers"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_84pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{onboardingThreeVM.onboardingThreeModel.txtEnterYourPers}"
            style="@style/txtPoppinsregular20" tools:text="@string/msg_enter_your_pers"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtYourFirstand"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_42pxh"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_54pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{onboardingThreeVM.onboardingThreeModel.txtYourFirstand}"
            style="@style/txtPoppinsregular16" tools:text="@string/msg_your_first_and"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_900_radius_6_2"
            android:ellipsize="end" android:hint="@string/lbl_john_doe"
            android:id="@+id/etGroupTwelve" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@={onboardingThreeVM.onboardingThreeModel.etGroupTwelveValue}"
            android:textColorHint="@color/gray_900_66"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtEmailAddress"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_42pxh"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{onboardingThreeVM.onboardingThreeModel.txtEmailAddress}"
            style="@style/txtPoppinsregular16" tools:text="@string/lbl_email_address"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_900_radius_6_2"
            android:ellipsize="end"
            android:hint="@string/msg_your_email_addr"
            android:id="@+id/etGroupThirteen"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@={onboardingThreeVM.onboardingThreeModel.etGroupThirteenValue}"
            android:textColorHint="@color/gray_900_66"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLanguage"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_42pxh"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{onboardingThreeVM.onboardingThreeModel.txtLanguage}"
            style="@style/txtPoppinsregular16" tools:text="@string/lbl_phone_number"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_900_radius_6_2"
            android:ellipsize="end"
            android:hint="@string/msg_your_phone_numb"
            android:id="@+id/etGroupFourteen" android:inputType="phone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@={onboardingThreeVM.onboardingThreeModel.etGroupFourteenValue}"
            android:textColorHint="@color/gray_900_66"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtIdenficationTy"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_42pxh"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{onboardingThreeVM.onboardingThreeModel.txtIdenficationTy}"
            style="@style/txtPoppinsregular16" tools:text="@string/msg_idenfication_ty"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_900_radius_6_2"
            android:drawableEnd="@drawable/img_arrow_1_gray_900"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end"
            android:hint="@string/msg_passport_natio"
            android:id="@+id/etGroupFifteen" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_28pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@={onboardingThreeVM.onboardingThreeModel.etGroupFifteenValue}"
            android:textColorHint="@color/gray_900_66"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtIdenficationNu"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_42pxh"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{onboardingThreeVM.onboardingThreeModel.txtIdenficationNu}"
            style="@style/txtPoppinsregular16" tools:text="@string/msg_idenfication_nu"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_900_radius_6_2"
            android:ellipsize="end"
            android:hint="@string/msg_identification"
            android:id="@+id/etGroupSixteen" android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@={onboardingThreeVM.onboardingThreeModel.etGroupSixteenValue}"
            android:textColorHint="@color/gray_900_66"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnNext"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_61pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@string/lbl_next" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_next"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtSkipforNow"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{onboardingThreeVM.onboardingThreeModel.txtSkipforNow}"
            style="@style/txtPoppinsregular18" textUnderline="true" tools:text="@string/lbl_skip_for_now"/>
    </LinearLayout>
</layout>
