<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="onboardingVM" type="com.application.app.modules.onboarding.data.viewmodel.OnboardingVM"/>
    </data>
    <LinearLayout android:id="@+id/linearOnboarding"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtEnterYourBusi"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_84pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{onboardingVM.onboardingModel.txtEnterYourBusi}"
            style="@style/txtPoppinsregular20" tools:text="@string/msg_enter_your_busi"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtBusinessName"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_42pxh"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_54pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{onboardingVM.onboardingModel.txtBusinessName}"
            style="@style/txtPoppinsregular16" tools:text="@string/lbl_business_name"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_900_radius_6_2"
            android:ellipsize="end"
            android:hint="@string/msg_legal_business"
            android:id="@+id/etGroupOne" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@={onboardingVM.onboardingModel.etGroupOneValue}"
            android:textColorHint="@color/gray_900_66"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtBusinessRegist"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_42pxh"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{onboardingVM.onboardingModel.txtBusinessRegist}"
            style="@style/txtPoppinsregular16" tools:text="@string/msg_business_regist"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_900_radius_6_2"
            android:ellipsize="end"
            android:hint="@string/msg_business_regist"
            android:id="@+id/etGroupTwo" android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@={onboardingVM.onboardingModel.etGroupTwoValue}"
            android:textColorHint="@color/gray_900_66"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTaxID"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_42pxh"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{onboardingVM.onboardingModel.txtTaxID}"
            style="@style/txtPoppinsregular16" tools:text="@string/lbl_tax_id"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_900_radius_6_2"
            android:ellipsize="end"
            android:hint="@string/msg_tax_identificat"
            android:id="@+id/etGroupThree" android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@={onboardingVM.onboardingModel.etGroupThreeValue}"
            android:textColorHint="@color/gray_900_66"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLocation"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_42pxh"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{onboardingVM.onboardingModel.txtLocation}"
            style="@style/txtPoppinsregular16" tools:text="@string/lbl_location"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_900_radius_6_2"
            android:ellipsize="end"
            android:hint="@string/msg_business_locati"
            android:id="@+id/etGroupFour" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@={onboardingVM.onboardingModel.etGroupFourValue}"
            android:textColorHint="@color/gray_900_66"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnNext"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_115pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@string/lbl_next" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_next"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtSkipforNow"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{onboardingVM.onboardingModel.txtSkipforNow}"
            style="@style/txtPoppinsregular18" textUnderline="true" tools:text="@string/lbl_skip_for_now"/>
    </LinearLayout>
</layout>
