<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="popUpOneRowModel" type="com.application.app.modules.popupone.data.model.PopUpOneRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowgroup269"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtGroup272"
            android:layout_height="wrap_content"
            android:layout_weight="0.33" android:layout_width="0dp"
            android:paddingHorizontal="@dimen/_30pxh"
            android:paddingVertical="@dimen/_30pxv"
            android:singleLine="true"
            android:text="@{popUpOneRowModel.txtGroup272}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_1"/>
        <TextView android:ellipsize="end" android:id="@+id/txtGroup267"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_weight="0.33" android:layout_width="0dp"
            android:paddingHorizontal="@dimen/_30pxh"
            android:paddingVertical="@dimen/_30pxv"
            android:singleLine="true"
            android:text="@{popUpOneRowModel.txtGroup267}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_2"/>
        <TextView android:ellipsize="end" android:id="@+id/txtGroup268"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_weight="0.33" android:layout_width="0dp"
            android:paddingHorizontal="@dimen/_30pxh"
            android:paddingVertical="@dimen/_30pxv"
            android:singleLine="true"
            android:text="@{popUpOneRowModel.txtGroup268}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_3"/>
    </LinearLayout>
</layout>
